[package]
name = "typed-quote"
version = "0.1.0"
edition = "2024"
description = "A fully typed quote!() alternative for both proc-macro and proc-macro2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EqualMa/typed-quote/"
keywords = ["proc-macro", "quote"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version = "1.86"

[dependencies]
proc-macro2 = { version = "1.0.106", default-features = false, optional = true }

[features]
default = ["alloc"]
alloc = []
proc-macro = ["proc-macro2?/proc-macro"]
proc-macro2 = ["dep:proc-macro2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["packages/test-proc-macro"]
